spacing fix (tho more of a hack than a fix let's be real)

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ p {
 
 #timechoice {
     grid-area: timechoice;
+    max-height: 0em!important;
 }
 
 #col1 {
@@ -919,6 +920,9 @@ strong {
 }
 
 @media (max-width: 900px) {
+    #timechoice {
+        max-height: none!important;
+    }
     .txt {
         padding-top: .4em;
         padding-bottom: .4em;
